// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accounts actions (1) accountAdded action creator 1`] = `
Object {
  "payload": Object {
    "username": "foo",
  },
  "type": "accounts/ACCOUNT_ADDED",
}
`;

exports[`accounts actions (2) accountDeleted action creator 1`] = `
Object {
  "payload": Object {
    "username": "foo",
  },
  "type": "accounts/ACCOUNT_DELETED",
}
`;

exports[`accounts actions (3) accountActivated action creator 1`] = `
Object {
  "payload": Object {
    "username": "foo",
  },
  "type": "accounts/ACCOUNT_ACTIVATED",
}
`;
